--- a/test_webserv-needs_different_structure/postMethod.html
+++ b/test_webserv-needs_different_structure/postMethod.html
@@ -6,7 +6,7 @@
     <title>POST Request</title>
 </head>
 <body>
-    <form action="new_upload" method="POST">
+    <form action="Server_1_uploads/new_upload" method="POST">
         <label for="data">Data:</label>
         <input type="text" id="data" name="data">
         <button type="submit">Submit</button>
